src/objects/Expert_Skill__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expert Skills</relationshipLabel>
        <relationshipName>Expert_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Expert Skills</relationshipLabel>
        <relationshipName>Expert_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Endorsements__c</fullName>
        <label>Number of Endorsements</label>
        <summaryForeignKey>Endorsement__c.Expert_Skill__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <referenceTo>ProfileSkill</referenceTo>
        <relationshipLabel>Expert Skills</relationshipLabel>
        <relationshipName>Expert_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expert Skill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Skill__c</columns>
        <columns>Contact__c</columns>
        <columns>Number_of_Endorsements__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Skill__c</field>
            <operation>contains</operation>
            <value>data migration</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Expert Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expert Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>